--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,174 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900");
+
+:root {
+    --footer: #ad9030;
+    --sobre-fosc: #FFFFFF;
+    --principal: #79BAAB;
+    --principal-light: #C5E1DB;
+    --contrast:#DC4A23;
+    --contrast-light:#EB9781;
+    --body-fons: #ffffff;
+}
+
 h1 {
-    color: hotpink;
-    font-family: cursive;
+    color: var(--fosc);
 }
 
 body {
     height: 100vh;
+    width: 100vw;
     color: #1f1f1f;
-    background: linear-gradient(to bottom, #bada55, #c0ffee);
-  }
+    margin: 0 auto;
+    font-family: 'Montserrat';
+    background-color: var(--body-fons);
+    min-width: 250px;
+    font-size: 1rem;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.img-fluid {
+    max-width: 20vw;
+    min-width:200px;
+    height: auto;
+}
+
+p {
+    line-height: 1.5rem;
+}
+
+/************
+HEADER
+************/
+header {
+    position: sticky;
+    top: 0;
+    text-align: center;
+    background-color: var(--sobre-fosc);
+    z-index: 1;
+}
+
+header .container {
+    margin: auto;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+}
+
+/*****************************
+NAVBAR menu
+*****************************/
+nav {
+    display: inline-block;
+    color: var(--fosc);
+}
+
+nav ul {
+    display:inline-block;
+    padding-left: 0;
+}
+
+nav ul li {
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: 400;
+    padding-left: 1rem;
+}
+
+nav ul li a:hover {
+    color: var(--principal);
+}
+
+nav li.active a {
+    color: var(--fosc);
+    font-weight: 600;
+}
+
+/*****************************
+FOOTER
+*****************************/
+
+footer, header {
+    background-color: var(--footer);
+    color: var(--sobre-fosc);
+    text-align: center;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem; /*top right bottom left*/
+}
+
+header, main, footer{
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+main {
+    max-width: 1080px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 2rem;
+}
+
+/*****************************
+PORTADA
+*****************************/
+#benvinguda {
+    background-image: url("img/max-bottinger-a6vQXseqllA-unsplash.jpg");
+    background-position: bottom center;
+    background-size: cover;
+    background-attachment: scroll;
+    height: 85vh;
+    max-width: 100vw;
+}
+
+#benvinguda h1 {
+    text-align: center;
+    padding-top: 10vh;
+    font-size: 3rem;
+    margin-top: 0;
+    color:antiquewhite;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+/*****************************
+ACTIVITATS
+*****************************/
+.activitatResum {
+    display:flex;
+    align-items:flex-start;
+    font-size: 0.9rem;
+}
+
+.activitatFoto {
+    margin-top: 1rem;
+    margin-right: 1rem;
+}
+
+h2 {
+    margin-bottom: 0;
+    margin-top: 2rem;
+}
+
+@media (max-width: 768px) {
+    
+    .activitatResum {
+        display: block;
+    }
+
+    .img-fluid {
+        max-width: 50vw;
+    }
+
+    header {
+        display:block;
+    }
+
+    nav ul {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
