--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900");
 
 :root {
-    --footer: #ad9030;
-    --sobre-fosc: #FFFFFF;
-    --principal: #79BAAB;
-    --principal-light: #C5E1DB;
-    --contrast:#DC4A23;
-    --contrast-light:#EB9781;
-    --body-fons: #ffffff;
+    --footer: #ecbf2c;
+    --hover: #45af87;
 }
 
 h1 {
@@ -23,6 +18,7 @@ body {
     background-color: var(--body-fons);
     min-width: 250px;
     font-size: 1rem;
+    text-align: justify;
 }
 
 a {
@@ -34,6 +30,10 @@ a {
     max-width: 20vw;
     min-width:200px;
     height: auto;
+}
+
+.img-article {
+    max-width: 100%;
 }
 
 p {
@@ -80,8 +80,8 @@ nav ul li {
     padding-left: 1rem;
 }
 
-nav ul li a:hover {
-    color: var(--principal);
+a:hover {
+    color: var(--hover);
 }
 
 nav li.active a {
