--- a/src/styles.css
+++ b/src/styles.css
@@ -187,4 +187,8 @@ h2 {
         margin-left: auto;
         margin-right: auto;
     }
+
+    #benvinguda h1 {
+        padding-bottom: 40vh;
+    }
 }
