--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@
 body {
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
     color: #1f1f1f;
     margin: 0 auto;
     font-family: 'Montserrat';
@@ -52,6 +53,16 @@ header .container {
     margin: auto;
     display: flex;
     justify-content: space-between;
+}
+
+.divlogo a {
+    display: inline-block;
+    line-height: 3rem;
+}
+
+.logo {
+    vertical-align: middle;
+    height: 30px;
 }
 
 /*****************************
@@ -99,10 +110,14 @@ header, main, footer{
     padding-right: 2%;
 }
 
+.logoBottom {
+    vertical-align: middle;
+    height: 0.8rem;
+}
+
 main {
     max-width: 1080px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     padding-bottom: 2rem;
 }
 
@@ -124,25 +139,39 @@ PORTADA
     margin-right: 0;
     padding-left: 0;
     padding-right: 0;
+    padding-top: 15vh;
+    padding-bottom: 5vh;
 }
 
 #benvinguda h1 {
     text-align: center;
-    padding-top: 40vh;
-    padding-bottom: 50vh;
     font-size: 3rem;
     margin-top: 0;
     color:var(--portada);
     text-transform: uppercase;
     font-weight: 600;
-    background-color: rgba(255, 255, 255, 0.4);
+}
+
+#maxMain {
+    max-width: 100vw;
+    padding-right: 0;
+    padding-left: 0;
+    padding-bottom: 0;
 }
 
 .titleBox {
     display: block;
-    max-width: 1080px;
     margin: auto;
-    padding-top: 0vh;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+.clip-circle {
+    height: 15rem;
+    clip-path:circle(5rem at center);
+    display: block;
+    margin: auto;
 }
 
 /*****************************
@@ -163,6 +192,32 @@ h2 {
     margin-bottom: 0;
     margin-top: 2rem;
 }
+
+/*****************************
+WIKI
+*****************************/
+.questionMark {
+    height: 2rem;
+    animation-name: question;
+    animation-duration: 1s;
+}
+
+/*****************************
+ANIMATION
+*****************************/
+
+@keyframes question {
+    30% { transform: scale(1.2); }
+    40%, 60% { transform: rotate(-20deg) scale(1.2); }
+    50% { transform: rotate(20deg) scale(1.2); }
+    70% { transform: rotate(0deg) scale(1.2); }
+    100% { transform: scale(1); }
+}
+  
+/*****************************
+MEDIA QUERIES
+*****************************/
+
 
 @media (max-width: 450px) {
     
@@ -186,9 +241,5 @@ h2 {
     nav ul {
         margin-left: auto;
         margin-right: auto;
-    }
-
-    #benvinguda h1 {
-        padding-bottom: 40vh;
     }
 }
