--- a/src/styles.css
+++ b/src/styles.css
@@ -198,20 +198,19 @@ WIKI
 *****************************/
 .questionMark {
     height: 2rem;
-    animation-name: question;
-    animation-duration: 1s;
+    animation-name: bigger;
+    animation-duration: 5s;
+    animation-iteration-count: 1;
 }
 
 /*****************************
 ANIMATION
 *****************************/
 
-@keyframes question {
-    30% { transform: scale(1.2); }
-    40%, 60% { transform: rotate(-20deg) scale(1.2); }
-    50% { transform: rotate(20deg) scale(1.2); }
-    70% { transform: rotate(0deg) scale(1.2); }
-    100% { transform: scale(1); }
+@keyframes bigger {
+    0% {transform:scale(0.6);opacity: 0;}
+    60% {transform: scale(1.4);opacity: 1;}
+    100% {transform: scale(1);opacity: 1;}
 }
   
 /*****************************
