--- a/src/styles.css
+++ b/src/styles.css
@@ -129,7 +129,7 @@ main {
 PORTADA
 *****************************/
 #benvinguda {
-    background-image: url("img/christian-wiediger-EmtaP8-VeNw-unsplash.jpg");
+    background-image: url("img/cover-background-desktop.jpg");
     background-position: bottom center;
     background-size: cover;
     background-attachment: scroll;
@@ -240,5 +240,9 @@ MEDIA QUERIES
     nav ul {
         margin-left: auto;
         margin-right: auto;
+    }
+
+    #benvinguda {
+        background-image: url("img/cover-background-mobile.jpg");
     }
 }
