--- a/src/styles.css
+++ b/src/styles.css
@@ -242,6 +242,11 @@ MEDIA QUERIES
         margin-right: auto;
     }
 
+    .otherActivities nav ul li {
+        display: block;
+        margin-bottom: 1rem;
+    }
+
     #benvinguda {
         background-image: url("img/cover-background-mobile.jpg");
     }
